# tydjaa

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
tstn/: asgi.py  settings.py  urls.py  wsgi.py
